WSRF-1003 - Fix AWS upload issue

--- a/.github/workflows/feature_5_legacy_docs.yml
+++ b/.github/workflows/feature_5_legacy_docs.yml
@@ -65,3 +65,4 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.STAGING_LEGACY_AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.STAGING_LEGACY_AWS_SECRET_ACCESS_KEY }}
+        AWS_EC2_METADATA_DISABLED: true
