--- a/.github/workflows/staging_5_legacy_docs.yml
+++ b/.github/workflows/staging_5_legacy_docs.yml
@@ -47,9 +47,11 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.STAGING_LEGACY_AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.STAGING_LEGACY_AWS_SECRET_ACCESS_KEY }}
+        AWS_EC2_METADATA_DISABLED: true
 
     - name: (deploy) Invalidate Cache
       run: aws cloudfront create-invalidation --distribution-id E7DUUPEI08HNW --paths "/docs/*"
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.STAGING_LEGACY_AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.STAGING_LEGACY_AWS_SECRET_ACCESS_KEY }}
+        AWS_EC2_METADATA_DISABLED: true
