--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -967,6 +967,12 @@
 - url: "release-notes"
   pages:
   - url: "6.0-upcoming-changes"
+  - url: "release-notes5106"
+    pages:
+    - url: "#Overview"
+    - url: "#Accompanying Premium Plugin changes"
+    - url: "#General bug fixes"
+    - url: "#Upgrading to the latest version of TinyMCE 5"
   - url: "release-notes5105"
     pages:
     - url: "#Overview"
