DOC-1758: release-notes5106.md & nav.yml
Added new section — Accompanying Premium self-hosted server-side component changes — to `releasenotes5106.md` and added ToC entry to this section to `nav.yml`

Also added in-document link to this new section to the Overview section of `release-notes5106.md`.

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -971,6 +971,7 @@
     pages:
     - url: "#Overview"
     - url: "#Accompanying Premium Plugin changes"
+    - url: "#Accompanying Premium self-hosted server-side component changes"
     - url: "#General bug fixes"
     - url: "#Upgrading to the latest version of TinyMCE 5"
   - url: "release-notes5105"
