TINY-8885: Add 5.10.6 changelog

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1235,6 +1235,7 @@
 
 - url: "changelog"
   pages:
+  - url: "#5.10.6 - 2022-10-19"
   - url: "#5.10.5 - 2022-05-25"
   - url: "#5.10.4 - 2022-04-27"
   - url: "#5.10.3 - 2022-02-09"
