--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1242,6 +1242,7 @@
 
 - url: "changelog"
   pages:
+  - url: "#5.10.7 - 2022-12-07"
   - url: "#5.10.6 - 2022-10-19"
   - url: "#5.10.5 - 2022-05-25"
   - url: "#5.10.4 - 2022-04-27"
