DOC-1895: .github/CODEOWNERS
Added @kmister85 to default reviewers list.

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-* @tinymce/documentation-team @tinymce/editor-platform-team @HAFRMO
+* @tinymce/documentation-team @tinymce/editor-platform-team @HAFRMO @kemister85
 
 # Integration docs
 /integrations/ @tinymce/documentation-team @tinymce/editor-platform-team @tinymce/integrations-team
