WSRF-1239: Update banner's alt text and add slash to the URL

--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ gettiny: https://www.tiny.cloud/get-tiny
 download-community: https://www.tiny.cloud/get-tiny/self-hosted/
 download-enterprise: https://www.tiny.cloud/my-account/downloads/
 accountpageurl: https://www.tiny.cloud/my-account
-accountsignup: https://www.tiny.cloud/auth/signup
+accountsignup: https://www.tiny.cloud/auth/signup/
 pricingpage: https://www.tiny.cloud/pricing
 contactpage: https://www.tiny.cloud/contact
 legalpages: https://www.tiny.cloud/legal
