--- a/.github/workflows/release_5_legacy_docs.yml
+++ b/.github/workflows/release_5_legacy_docs.yml
@@ -14,7 +14,7 @@ env:
 jobs:
   build:
     name: Build Docs and Deploy
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
     - uses: actions/checkout@v1
