DOC-2026: antora.yml
Added ai plugin-specific variable to antora.yml.

Added here rather than to ai.adoc on the premise that it is better to put all variables with a value pointing to tiny.cloud in one file.

--- a/antora.yml
+++ b/antora.yml
@@ -54,6 +54,8 @@ asciidoc:
     legalpages: https://www.tiny.cloud/legal
     communitysupporturl: https://stackoverflow.com/questions/tagged/tinymce
     betaprogramurl: https://www.tiny.cloud/insights-program/
+    # plugin-specific tiny.cloud URLs
+    aipricingurl: https://www.tiny.cloud/tinymce/features/ai-integration/
     # HTML entities
     tick: '&#10004;'
     cross: '&#10006;'
