--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-* @tinymce/documentation-team @tinymce/editor-platform-team @HAFRMO
+* @tinymce/documentation-team
 
 # Integration docs
 /integrations/ @tinymce/documentation-team @tinymce/editor-platform-team @tinymce/integrations-team
