DOC-2222: Add clipboard variable

--- a/antora.yml
+++ b/antora.yml
@@ -65,6 +65,7 @@ asciidoc:
     ellps: '&#133;'
     # Mergetag Variable replacement in Demos
     mce-cursor: '{{mce-cursor}}'
+    mce-clipboard: '{{mce-clipboard}}'
     # Demo logos
     logofordemos: 'https://www.tiny.cloud/docs/images/logos/android-chrome-256x256.png'
     logofordemoshtml: '<p><img style="display: block; margin-left: auto; margin-right: auto;" title="Tiny Logo" src="https://www.tiny.cloud/docs/images/logos/android-chrome-256x256.png" alt="TinyMCE Logo" width="128" height="128"></p>'
