--- a/antora.yml
+++ b/antora.yml
@@ -63,9 +63,9 @@ asciidoc:
     newline: '<br>'
     virt_ellps: '&#8942;'
     ellps: '&#133;'
-    # Mergetag Variable replacement in Demos
-    mce-cursor: '{{mce-cursor}}'
-    mce-clipboard: '{{mce-clipboard}}'
+    # Prevent Mergetags as variables
+    prefix: '{{'
+    suffix: '}}'
     # Demo logos
     logofordemos: 'https://www.tiny.cloud/docs/images/logos/android-chrome-256x256.png'
     logofordemoshtml: '<p><img style="display: block; margin-left: auto; margin-right: auto;" title="Tiny Logo" src="https://www.tiny.cloud/docs/images/logos/android-chrome-256x256.png" alt="TinyMCE Logo" width="128" height="128"></p>'
