DOC-2222: Fix comment

--- a/antora.yml
+++ b/antora.yml
@@ -63,7 +63,7 @@ asciidoc:
     newline: '<br>'
     virt_ellps: '&#8942;'
     ellps: '&#133;'
-    # Prevent Mergetags as variables
+    # Prevent Mergetags becoming variables
     prefix: '{{'
     suffix: '}}'
     # Demo logos
