--- a/antora-playbook-dev.yml
+++ b/antora-playbook-dev.yml
@@ -9,6 +9,7 @@ content:
     start_path: ./
 urls:
   html_extension_style: indexify
+  latest_version_segment: '6'
 ui:
   bundle:
     url: https://tiny-cloud-docs-antora-themes-staging.s3.amazonaws.com/ui-bundle.zip
