--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,6 @@
 name: tinymce
 title: TinyMCE Documentation
-version: '6'
+version: 'latest'
 asciidoc:
   attributes:
     # anchor configuration (the @ allows it to be overridden if required)
@@ -18,7 +18,7 @@ asciidoc:
     # product variables
     productname: TinyMCE
     productmajorversion: 6
-    productminorversion: '6.6'
+    productminorversion: '6.8'
     ##### product name in codeblock
     prodnamecode: tinymce
     #### more names
