DOC-2220: Build site script

--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "homepage": "https://www.tiny.cloud/docs/",
   "scripts": {
-    "nodemon-dev": "nodemon --exec antora ./antora-playbook-dev.yml",
     "build": "./-scripts/api-reference.sh",
     "build-local-ref": "./-scripts/api-reference-local.sh",
+    "generate-site": "./-scripts/generate-site.sh",
+    "nodemon-dev": "nodemon --exec yarn generate-site ./antora-playbook-dev.yml",
     "server": "http-server build/site/ --port 4000",
     "serve": "npm-run-all -p nodemon-dev server"
   },
