--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,7 @@
 name: tinymce
 title: TinyMCE Documentation
 version: 'latest'
+display_version: '6'
 asciidoc:
   attributes:
     # anchor configuration (the @ allows it to be overridden if required)
