DOC-2220: Update staging and release docs to build latest site

--- a/.github/workflows/release_6_docs.yml
+++ b/.github/workflows/release_6_docs.yml
@@ -33,7 +33,7 @@ jobs:
       run: yarn build
 
     - name: (Release - Docs 6) Build Website
-      run: yarn antora ./antora-playbook-prod.yml
+      run: yarn generate-site ./antora-playbook-prod.yml
 
     - name: (Release - Docs 6) Rename sitemap.xml (Temporary solution - Amit)
       shell: bash
