DOC-2220: Build `6` site in sync with `latest` site as new default (#3028)
* DOC-2220: Add latest build

* DOC-2220: Build site script

* DOC-2220: Update staging and release docs to build latest site

* DOC-2220: Fix links

* DOC-2220: Update messages

* DOC-2220: Change generation

* DOC-2220: Update Changelog

--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,7 @@
 name: tinymce
 title: TinyMCE Documentation
-version: '6'
+version: 'latest'
+display_version: '6'
 asciidoc:
   attributes:
     # anchor configuration (the @ allows it to be overridden if required)
@@ -18,7 +19,7 @@ asciidoc:
     # product variables
     productname: TinyMCE
     productmajorversion: 6
-    productminorversion: '6.6'
+    productminorversion: '6.8'
     ##### product name in codeblock
     prodnamecode: tinymce
     #### more names
