--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,6 @@
 name: tinymce
 title: TinyMCE Documentation
-version: 'latest'
+version: '5'
 asciidoc:
   attributes:
     cdnurl: https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js
