--- a/.github/workflows/staging_6_docs.yml
+++ b/.github/workflows/staging_6_docs.yml
@@ -41,7 +41,7 @@ jobs:
         mv ./build/site/sitemap.xml ./build/site/antora-sitemap.xml
 
     - name: (deploy) Upload site to S3
-      run: aws s3 sync --acl=public-read --delete ./build/site s3://tiny-cloud-antora-docs-staging/docs --exclude 'tinymce/5'
+      run: aws s3 sync --acl=public-read --delete ./build/site s3://tiny-cloud-antora-docs-staging/docs --exclude 'tinymce/*' --include 'tinymce/latest/*' --include 'tinymce/6/*'
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.STAGING_AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.STAGING_AWS_SECRET_ACCESS_KEY }}
