DOC-2236: Fix assorted issues

--- a/antora-playbook-dev.yml
+++ b/antora-playbook-dev.yml
@@ -1,5 +1,5 @@
 site:
-  title: TinyMCE Documentation (Dev)
+  title: TinyMCE 5 Documentation (Dev)
   url: https://www.tiny.cloud/docs
   start_page: tinymce::index.adoc
 content:
