--- a/antora-playbook-prod.yml
+++ b/antora-playbook-prod.yml
@@ -1,5 +1,5 @@
 site:
-  title: TinyMCE Documentation
+  title: TinyMCE 5 Documentation
   url: https://www.tiny.cloud/docs
   start_page: tinymce::index.adoc
 content:
