--- a/antora-playbook-staging.yml
+++ b/antora-playbook-staging.yml
@@ -1,5 +1,5 @@
 site:
-  title: TinyMCE Documentation (Staging)
+  title: TinyMCE 5 Documentation (Staging)
   url: https://staging.tiny.cloud/docs
   start_page: tinymce::index.adoc
 content:
