DOC-2236: Update to new legacy API docs

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@antora/cli": "^3.0.1",
     "@antora/site-generator-default": "^3.0.1",
     "@tinymce/antora-extension-livedemos": "^0.0.1-rc.20220624042543634.shaf1b28a3",
-    "@tinymce/moxiedoc": "^0.2.0-rc.20220310010105103.sha4bab33b",
+    "@tinymce/moxiedoc": "^0.3.0",
     "dotenv": "^16.0.0",
     "ecstatic": "^4.1.4",
     "http-server": "^0.12.3",
