DOC-2264: Update site title

--- a/antora.yml
+++ b/antora.yml
@@ -1,7 +1,6 @@
 name: tinymce
 title: TinyMCE Documentation
-version: 'latest'
-display_version: '6'
+version: '6'
 asciidoc:
   attributes:
     # anchor configuration (the @ allows it to be overridden if required)
