--- a/.github/workflows/release_5_docs.yml
+++ b/.github/workflows/release_5_docs.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16]
+        node-version: [21]
 
     steps:
     - uses: actions/checkout@v1
@@ -42,6 +42,13 @@ jobs:
 
     - name: (deploy) Upload to S3
       run: aws s3 sync --acl=public-read --delete ./build/site s3://tiny-cloud-antora-docs-production/docs --exclude '*' --include 'tinymce/5/*'
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.PRODUCTION_AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.PRODUCTION_AWS_SECRET_ACCESS_KEY }}
+        AWS_EC2_METADATA_DISABLED: true
+      
+    - name: (deploy) Upload images to S3
+      run: aws s3 sync --acl=public-read ./build/site/_ s3://tiny-cloud-antora-docs-production/docs/_ --exclude '*' --include 'img'
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.PRODUCTION_AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.PRODUCTION_AWS_SECRET_ACCESS_KEY }}
