--- a/.github/workflows/feature_7_docs.yml
+++ b/.github/workflows/feature_7_docs.yml
@@ -1,4 +1,4 @@
-name: Develop > Tiny 6 Docs
+name: Develop > Tiny 7 Docs
 
 on:
   workflow_dispatch:
@@ -6,17 +6,17 @@ on:
     paths:
       - '**'
     branches:
-      - 'feature/6**'
-      - 'hotfix/6**'
+      - 'feature/7**'
+      - 'hotfix/7**'
 
 jobs:
   build:
     name: Build Docs and Deploy
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     strategy:
       matrix:
-        node-version: [14]
+        node-version: [21]
 
     steps:
     - uses: actions/checkout@v1
@@ -27,13 +27,13 @@ jobs:
         cache: 'yarn'
         node-version: ${{ matrix.node-version }}
 
-    - name: (Feature - Docs 6) Install dependencies
+    - name: (Feature - Docs 7) Install dependencies
       run: yarn install
 
-    - name: (Feature - Docs 6) Build API References
+    - name: (Feature - Docs 7) Build API References
       run: yarn build
 
-    - name: (Feature - Docs 6) Build Website
+    - name: (Feature - Docs 7) Build Website
       run: yarn generate-site ./antora-playbook-dev.yml
 
     - name: (deploy) Prepare for branch deployments
@@ -56,7 +56,7 @@ jobs:
         echo $S3_BUCKET > S3_BUCKET
 
     - name: (deploy) Upload website to S3
-      run: aws s3 sync --acl=public-read --delete ./build/site $(cat S3_BUCKET)/docs --exclude 'tinymce/*' --include 'tinymce/latest/*' --include 'tinymce/6/*'
+      run: aws s3 sync --acl=public-read --delete ./build/site $(cat S3_BUCKET)/docs
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.STAGING_AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.STAGING_AWS_SECRET_ACCESS_KEY }}
