--- a/.github/workflows/release_7_docs.yml
+++ b/.github/workflows/release_7_docs.yml
@@ -1,4 +1,4 @@
-name: Release > Tiny 6 Docs
+name: Release > Tiny 7 Docs
 
 on:
   workflow_dispatch:
@@ -6,16 +6,16 @@ on:
     paths:
       - '**'
     branches:
-      - 'release/docs-6'
+      - 'release/docs-7'
 
 jobs:
   build:
     name: Build Docs and Deploy
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     strategy:
       matrix:
-        node-version: [14]
+        node-version: [21]
 
     steps:
     - uses: actions/checkout@v1
@@ -26,22 +26,22 @@ jobs:
         cache: 'yarn'
         node-version: ${{ matrix.node-version }}
 
-    - name: (Release - Docs 6) Install dependencies
+    - name: (Release - Docs 7) Install dependencies
       run: yarn install
 
-    - name: (Release - Docs 6) Build API References
+    - name: (Release - Docs 7) Build API References
       run: yarn build
 
-    - name: (Release - Docs 6) Build Website
+    - name: (Release - Docs 7) Build Website
       run: yarn generate-site ./antora-playbook-prod.yml
 
-    - name: (Release - Docs 6) Rename sitemap.xml (Temporary solution - Amit)
+    - name: (Release - Docs 7) Rename sitemap.xml
       shell: bash
       run: |
         mv ./build/site/sitemap.xml ./build/site/antora-sitemap.xml
 
-    - name: (deploy) Upload site to S3
-      run: aws s3 sync --acl=public-read --delete ./build/site s3://tiny-cloud-antora-docs-production/docs --exclude 'tinymce/*' --include 'tinymce/latest/*' --include 'tinymce/6/*'
+    - name: (deploy) Upload website to S3
+      run: aws s3 sync --acl=public-read --delete ./build/site s3://tiny-cloud-antora-docs-production/docs --exclude 'tinymce/*' --include 'tinymce/latest/*' --include 'tinymce/7/*'
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.PRODUCTION_AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.PRODUCTION_AWS_SECRET_ACCESS_KEY }}
