--- a/.github/workflows/staging_6_docs.yml
+++ b/.github/workflows/staging_6_docs.yml
@@ -11,11 +11,11 @@ on:
 jobs:
   build:
     name: Build Docs and Deploy
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     strategy:
       matrix:
-        node-version: [14]
+        node-version: [21]
 
     steps:
     - uses: actions/checkout@v1
@@ -33,15 +33,17 @@ jobs:
       run: yarn build
 
     - name: (Staging - Docs 6) Build Website
-      run: yarn generate-site ./antora-playbook-staging.yml
-
-    - name: (Staging - Docs 6) Rename sitemap.xml (Temporary solution - Amit)
-      shell: bash
-      run: |
-        mv ./build/site/sitemap.xml ./build/site/antora-sitemap.xml
+      run: yarn antora ./antora-playbook-staging.yml
 
     - name: (deploy) Upload site to S3
-      run: aws s3 sync --acl=public-read --delete ./build/site s3://tiny-cloud-antora-docs-staging/docs --exclude 'tinymce/*' --include 'tinymce/latest/*' --include 'tinymce/6/*'
+      run: aws s3 sync --acl=public-read --delete ./build/site s3://tiny-cloud-antora-docs-staging/docs --exclude '*' --include 'tinymce/6/*'
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.STAGING_AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.STAGING_AWS_SECRET_ACCESS_KEY }}
+        AWS_EC2_METADATA_DISABLED: true
+
+    - name: (deploy) Upload images to S3
+      run: aws s3 sync --acl=public-read ./build/site/_ s3://tiny-cloud-antora-docs-staging/docs/_ --exclude '*' --include 'img'
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.STAGING_AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.STAGING_AWS_SECRET_ACCESS_KEY }}
