DOC-2300: Replace Skins & Icons Packs with Enhanced Skins & Icon Packs in 7x docs.

--- a/antora.yml
+++ b/antora.yml
@@ -33,7 +33,7 @@ asciidoc:
     supportname: Tiny Support
     betaprogram: Tiny Insights Program
     #### some plugin names
-    prem_skins_icons: Tiny Skins and Icon Packs
+    prem_skins_icons: Enhanced Skins & Icon Packs
     #### Plan names
     tieroneplan: Tiny Cloud Core Plan
     tiertwoplan: Tiny Cloud Essential Plan
