--- a/-new-material-templates/release-notes-template/antora.yml
+++ b/-new-material-templates/release-notes-template/antora.yml
@@ -36,7 +36,7 @@ asciidoc:
     supportname: Tiny Support
     betaprogram: Tiny Insights Program
     #### some plugin names
-    prem_skins_icons: Tiny Skins and Icon Packs
+    prem_skins_icons: Enhanced Skins & Icon Packs
     #### Plan names
     tieroneplan: Tiny Cloud Core Plan
     tiertwoplan: Tiny Cloud Essential Plan
