--- a/-new-material-templates/release-notes-template/antora.yml
+++ b/-new-material-templates/release-notes-template/antora.yml
@@ -60,6 +60,7 @@ asciidoc:
     betaprogramurl: https://www.tiny.cloud/insights-program/
     # plugin-specific tiny.cloud URLs
     aipricingurl: https://www.tiny.cloud/tinymce/features/ai-integration/
+    exportwordpricingurl: https://www.tiny.cloud/tinymce/features/export-word/
     # HTML entities
     tick: '&#10004;'
     cross: '&#10006;'
