DOC-2266: update admon specific to plugin.

--- a/antora.yml
+++ b/antora.yml
@@ -58,6 +58,7 @@ asciidoc:
     # plugin-specific tiny.cloud URLs
     aipricingurl: https://www.tiny.cloud/tinymce/features/ai-integration/
     exportwordpricingurl: https://www.tiny.cloud/tinymce/features/export-word/
+    exportpdfpricingurl: https://www.tiny.cloud/tinymce/features/export-pdf/
     # HTML entities
     tick: '&#10004;'
     cross: '&#10006;'
