DOC-2267: Add new documentation for `ImportWord` Plugin. (#3094)
* Add new documenation for ImportWord Plugin.

* DOC-2267: add note for self-hosted customers.

* Update modules/ROOT/partials/configuration/importword.adoc

* DOC-2267: update paid addon admon and attached api https link.

* Update modules/ROOT/partials/configuration/importword.adoc

* Update modules/ROOT/pages/importword.adoc

* Update modules/ROOT/partials/plugin-apis/importword-apis.adoc

* Update modules/ROOT/pages/editor-command-identifiers.adoc

Co-authored-by: Hamza Benkhaldoun <hamza0867@gmail.com>

* Update modules/ROOT/partials/commands/importword-cmds.adoc

* Update modules/ROOT/partials/configuration/importword.adoc

* DOC-2267: copy edits, removal of demo.

* add menu item to `available-menu-items.adoc`

* add toolbar button to `available-toolbar-buttons.adoc`

* add menu item to `defaultmenuitems.adoc`

* Update modules/ROOT/partials/commands/importword-cmds.adoc

* Update importword-cmds.adoc

Co-authored-by: vpyshnenko <viktor.pyshnenko@tiny.cloud>

* Update importword-cmds.adoc

Co-authored-by: vpyshnenko <viktor.pyshnenko@tiny.cloud>

* Update modules/ROOT/partials/commands/importword-cmds.adoc

* Update modules/ROOT/pages/importword.adoc

* DOC-2267: update api reference, copy edits and cleanup.

* Update modules/ROOT/pages/importword.adoc

* Update modules/ROOT/pages/importword.adoc

Co-authored-by: Farzad Hayat <farzad.hayatbakhsh@tiny.cloud>

* DOC-2267: add admon specific to plugin.

---------

Co-authored-by: Hamza Benkhaldoun <hamza0867@gmail.com>
Co-authored-by: Farzad Hayatbakhsh <farzad.hayatbakhsh@tiny.cloud>
Co-authored-by: vpyshnenko <viktor.pyshnenko@tiny.cloud>

--- a/-new-material-templates/release-notes-template/antora.yml
+++ b/-new-material-templates/release-notes-template/antora.yml
@@ -60,6 +60,7 @@ asciidoc:
     betaprogramurl: https://www.tiny.cloud/insights-program/
     # plugin-specific tiny.cloud URLs
     aipricingurl: https://www.tiny.cloud/tinymce/features/ai-integration/
+    importwordpricingurl: https://www.tiny.cloud/tinymce/features/import-from-word/
     exportwordpricingurl: https://www.tiny.cloud/tinymce/features/export-word/
     exportpdfpricingurl: https://www.tiny.cloud/tinymce/features/export-pdf/
     # HTML entities
