DOC-2324: Update playbooks

--- a/antora.yml
+++ b/antora.yml
@@ -1,7 +1,6 @@
 name: tinymce
 title: TinyMCE Documentation
-version: 'latest'
-display_version: '7'
+version: '7'
 asciidoc:
   attributes:
     # anchor configuration (the @ allows it to be overridden if required)
