--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "scripts": {
     "build": "./-scripts/api-reference.sh",
     "build-local-ref": "./-scripts/api-reference-local.sh",
-    "generate-site": "./-scripts/generate-site.sh",
-    "nodemon-dev": "nodemon --exec yarn generate-site ./antora-playbook-dev.yml",
+    "nodemon-dev": "nodemon --exec yarn antora ./antora-playbook.yml",
     "server": "http-server build/site/ --port 4000",
     "serve": "npm-run-all -p nodemon-dev server"
   },
@@ -31,7 +30,7 @@
     "@antora/cli": "^3.0.1",
     "@antora/site-generator-default": "^3.0.1",
     "@tinymce/antora-extension-livedemos": "^0.1.0",
-    "@tinymce/moxiedoc": "^0.2.1",
+    "@tinymce/moxiedoc": "^0.3.0",
     "dotenv": "^16.0.0",
     "ecstatic": "^4.1.4",
     "http-server": "^0.12.3",
