--- a/antora.yml
+++ b/antora.yml
@@ -16,6 +16,8 @@ asciidoc:
     webcomponent_url: https://cdn.jsdelivr.net/npm/@tinymce/tinymce-webcomponent@2/dist/tinymce-webcomponent.min.js
     jquery_url: https://cdn.jsdelivr.net/npm/@tinymce/tinymce-jquery@2/dist/tinymce-jquery.min.js
     default_meta_keywords: tinymce, documentation, docs, plugins, customizable skins, configuration, examples, html, php, java, javascript, image editor, inline editor, distraction-free editor, classic editor, wysiwyg
+    # product docker variables
+    dockerimageimportfromwordexporttoword: registry.containers.tiny.cloud/import-from-word-export-to-word
     # product variables
     productname: TinyMCE
     productmajorversion: 7
