--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -1,16 +1,17 @@
 site:
   title: TinyMCE Documentation
-  url: https://localhost:4000
+  url: https://www.tiny.cloud
   start_page: tinymce::index.adoc
 content:
   sources:
   - url: ./
-    branches: HEAD
+    branches: [ HEAD ]
     start_path: ./
   - url: https://github.com/MitchC1999/tinymce-docs.git
     branches: [ 5, 7 ]
 urls:
   html_extension_style: indexify
+  latest_version_segment: latest
 ui:
   bundle:
     url: https://tiny-cloud-docs-antora-themes-staging.s3.amazonaws.com/ui-bundle.zip
