--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "scripts": {
     "build": "./-scripts/api-reference.sh",
     "build-local-ref": "./-scripts/api-reference-local.sh",
+    "clean": "rm -rf ./build",
     "nodemon-dev": "nodemon --exec yarn antora ./antora-playbook.yml",
     "server": "http-server build/site/ --port 4000",
-    "serve": "npm-run-all -p nodemon-dev server"
+    "serve": "npm-run-all -p nodemon-dev server",
+    "start": "yarn clean && yarn serve"
   },
   "author": "Tiny Technologies Inc",
   "license": "CC-BY-NC-SA-3.0",
