DOC-2324: Update playbook

--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -1,6 +1,6 @@
 site:
   title: TinyMCE Documentation
-  url: https://localhost:4000
+  url: https://www.tiny.cloud/docs
   start_page: tinymce::index.adoc
 content:
   sources:
@@ -11,7 +11,6 @@ content:
     branches: [ 5, 6 ]
 urls:
   html_extension_style: indexify
-  latest_version_segment_strategy: redirect:to
   latest_version_segment: latest
 ui:
   bundle:
