DOC-2324: Update playbook

--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -1,6 +1,6 @@
 site:
   title: TinyMCE 5
-  url: https://localhost:4000
+  url: https://www.tiny.cloud/docs
   start_page: tinymce::index.adoc
 content:
   sources:
