--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "server": "http-server build/site/ --port 4000",
     "serve": "npm-run-all -p watch server",
     "build": "./_scripts/api-reference.sh",
-    "build-local": "./_scripts/api-reference-local.sh"
+    "build-local": "./_scripts/api-reference-local.sh",
+    "clean": "rm -rf ./build",
+    "start": "yarn clean && yarn serve"
   },
   "author": "Tiny Technologies Inc",
   "license": "CC-BY-NC-SA-3.0",
