DOC-2324: Fix url

--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -1,6 +1,6 @@
 site:
   title: TinyMCE Documentation
-  url: https://www.tiny.cloud
+  url: https://www.tiny.cloud/docs
   start_page: tinymce::index.adoc
 content:
   sources:
@@ -11,7 +11,6 @@ content:
     branches: [ 5, 7 ]
 urls:
   html_extension_style: indexify
-  latest_version_segment: latest
 ui:
   bundle:
     url: https://tiny-cloud-docs-antora-themes-staging.s3.amazonaws.com/ui-bundle.zip
