--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -1,5 +1,5 @@
 site:
-  title: TinyMCE 5
+  title: TinyMCE Documentation
   url: https://www.tiny.cloud/docs
   start_page: tinymce::index.adoc
 content:
