--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -11,6 +11,7 @@ content:
     branches: [ 6, 7 ]
 urls:
   html_extension_style: indexify
+  latest_version_segment: latest
 ui:
   bundle:
     url: https://tiny-cloud-docs-antora-themes-staging.s3.amazonaws.com/ui-bundle.zip
