DOC-2324: Testing development workflows

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -2,9 +2,9 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ "feature/**", "hotfix/**", "staging/**", "release/**"  ]
+    branches: [ "feature/**", "hotfix/**", "tinymce/**" ]
   pull_request:
-    branches: [ "staging/**", "release/**" ]
+    branches: [ "tinymce/**" ]
 ## Add schedule if needed
 #  schedule:
 #    - cron: "17 23 * * 5"
