--- a/.github/workflows/develop_7_docs.yml
+++ b/.github/workflows/develop_7_docs.yml
@@ -51,8 +51,18 @@ jobs:
           echo "WARNING! S3_BUCKET name is too long"
         fi
         echo $S3_BUCKET > S3_BUCKET
+  
     - name: (deploy) Upload website to S3
       run: aws s3 sync --acl=public-read --delete ./build/site $(cat S3_BUCKET)/docs
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.STAGING_AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.STAGING_AWS_SECRET_ACCESS_KEY }}
+        AWS_EC2_METADATA_DISABLED: true
+
+    - name: Add redirect for current major version pages to latest
+      run: |
+        touch index.html
+        aws s3api put-object --bucket ${S3_BUCKET} --key '/docs/tinymce/7/(.*)' --body index.html --website-redirect '/docs/tinymce/latest/$1' --acl public-read
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.STAGING_AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.STAGING_AWS_SECRET_ACCESS_KEY }}
