--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -4,11 +4,8 @@ site:
   start_page: tinymce::index.adoc
 content:
   sources:
-  - url: ./
-    branches: HEAD
-    start_path: ./
   - url: https://github.com/tinymce/tinymce-docs.git
-    branches: [ tinymce/5, tinymce/6 ]
+    branches: [ tinymce/5, tinymce/6, tinymce/7 ]
 urls:
   html_extension_style: indexify
   latest_version_segment: latest
