DOC-2324: Adjust workflow commands

--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -46,8 +46,9 @@ jobs:
   
     - name: Upload website to S3 and Invalidate Cache
       if: inputs.environment == 'staging'
-      run: aws s3 sync --acl=public-read --delete ./build/site s3://docs-feature-6-doc-2324.staging.tiny.cloud/docs
-      run: aws cloudfront create-invalidation --distribution-id E7DUUPEI08HNW --paths "/docs/*"
+      run: |
+        aws s3 sync --acl=public-read --delete ./build/site s3://docs-feature-6-doc-2324.staging.tiny.cloud/docs
+        aws cloudfront create-invalidation --distribution-id E7DUUPEI08HNW --paths "/docs/*"
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.STAGING_AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.STAGING_AWS_SECRET_ACCESS_KEY }}
@@ -55,8 +56,9 @@ jobs:
   
     - name: Upload website to S3 and Invalidate Cache
       if: inputs.environment == 'production'
-      run: aws cloudfront create-invalidation --distribution-id E3LFU502SQ5UR --paths "/docs/*"
-      run: aws s3 sync --acl=public-read --delete ./build/site s3://docs-feature-7-doc-2324.staging.tiny.cloud/docs
+      run: |
+        aws cloudfront create-invalidation --distribution-id E3LFU502SQ5UR --paths "/docs/*"
+        aws s3 sync --acl=public-read --delete ./build/site s3://docs-feature-7-doc-2324.staging.tiny.cloud/docs
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.PRODUCTION_AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.PRODUCTION_AWS_SECRET_ACCESS_KEY }}
