--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -2,12 +2,9 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ "feature/**", "hotfix/**", "tinymce/**"  ]
+    branches: [ "feature/**", "hotfix/**", "release/**", "staging/**", "tinymce/**"  ]
   pull_request:
     branches: [ "tinymce/**" ]
-## Add schedule if needed
-#  schedule:
-#    - cron: "17 23 * * 5"
 
 jobs:
   analyze:
@@ -25,7 +22,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
