--- a/.github/workflows/develop_6_docs.yml
+++ b/.github/workflows/develop_6_docs.yml
@@ -6,23 +6,25 @@ on:
     paths:
       - '**'
     branches:
-      - 'feature/6**'
-      - 'hotfix/6**'
+      - 'feature/**'
+      - 'hotfix/**'
+      - 'release/**'
+      - 'staging/**'
 
 jobs:
   build:
     name: Build Docs and Deploy
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [21]
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v4
 
     - name: Use Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v4
       with:
         cache: 'yarn'
         node-version: ${{ matrix.node-version }}
