DOC-2373: Update codeql branches

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -2,7 +2,7 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ "feature/**", "hotfix/**", "tinymce/**" ]
+    branches: [ "feature/**", "hotfix/**", "release/**", "staging/**", "tinymce/**" ]
   pull_request:
     branches: [ "tinymce/**" ]
 
