--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -18,17 +18,17 @@ jobs:
 
     if: github.repository == 'tinymce/tinymce-docs' && github.repository_owner == 'tinymce'
 
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [21]
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v4
 
     - name: Use Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v4
       with:
         cache: 'yarn'
         node-version: ${{ matrix.node-version }}
