--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "build": "./-scripts/api-reference.sh",
     "build-local-ref": "./-scripts/api-reference-local.sh",
     "clean": "rm -rf ./build",
-    "nodemon-dev": "nodemon --exec yarn antora ./antora-playbook.yml",
+    "nodemon": "nodemon --exec yarn antora ./antora-playbook.yml",
+    "nodemon-dev": "nodemon --exec yarn antora ./antora-playbook-local.yml",
     "server": "http-server build/site/ --port 4000",
-    "serve": "npm-run-all -p nodemon-dev server",
-    "start": "yarn clean && yarn serve"
+    "serve": "npm-run-all -p nodemon server",
+    "serve-dev": "npm-run-all -p nodemon-dev server",
+    "start": "yarn clean && yarn serve",
+    "start-dev": "yarn clean && yarn serve-dev"
   },
   "author": "Tiny Technologies Inc",
   "license": "CC-BY-NC-SA-3.0",
