DOC-2384: Added local playbook and dev scripts

--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   },
   "homepage": "https://www.tiny.cloud/docs/",
   "scripts": {
-    "watch": "nodemon --exec antora antora-playbook.yml",
-    "server": "http-server build/site/ --port 4000",
-    "serve": "npm-run-all -p watch server",
     "build": "./-scripts/api-reference.sh",
-    "build-local": "./-scripts/api-reference-local.sh",
+    "build-local-ref": "./-scripts/api-reference-local.sh",
     "clean": "rm -rf ./build",
-    "start": "yarn clean && yarn serve"
+    "nodemon": "nodemon --exec yarn antora ./antora-playbook.yml",
+    "nodemon-dev": "nodemon --exec yarn antora ./antora-playbook-local.yml",
+    "server": "http-server build/site/ --port 4000",
+    "serve": "npm-run-all -p nodemon server",
+    "serve-dev": "npm-run-all -p nodemon-dev server",
+    "start": "yarn clean && yarn serve",
+    "start-dev": "yarn clean && yarn serve-dev"
   },
   "author": "Tiny Technologies Inc",
   "license": "CC-BY-NC-SA-3.0",
