change default http-server address to 'localhost'

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clean": "rm -rf ./build",
     "nodemon": "nodemon --exec yarn antora ./antora-playbook.yml",
     "nodemon-dev": "nodemon --exec yarn antora ./antora-playbook-local.yml",
-    "server": "http-server build/site/ --port 4000",
+    "server": "http-server build/site/ --port 4000 -a localhost",
     "serve": "npm-run-all -p nodemon server",
     "serve-dev": "npm-run-all -p nodemon-dev server",
     "start": "yarn clean && yarn serve",
