DOC-2394: Publish antora 4 docs

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,10 @@
-* @tinymce/documentation-team @tinymce/editor-platform-team
+* @tinymce/documentation-team
 
 # Integration docs
 /integrations/ @tinymce/documentation-team @tinymce/editor-platform-team @tinymce/integrations-team
+/_includes/integrations/ @tinymce/documentation-team @tinymce/editor-platform-team @tinymce/integrations-team
 
 # Content worked on by the design team
+/_includes/live-demos/ @tinymce/documentation-team @tinymce/editor-platform-team @lostkeys
 /demo/ @lostkeys @tinymce/documentation-team @tinymce/editor-platform-team
+/enterprise/premium-skins-and-icon-packs/ @lostkeys @tinymce/documentation-team @tinymce/editor-platform-team
