--- a/-new-material-templates/release-notes-template/antora.yml
+++ b/-new-material-templates/release-notes-template/antora.yml
@@ -1,6 +1,7 @@
 name: tinymce
 title: TinyMCE Documentation
-version: '3'
+# update the version value if required. Almost certainly *not* required.
+version: '6'
 asciidoc:
   attributes:
     # anchor configuration (the @ allows it to be overridden if required)
@@ -15,16 +16,13 @@ asciidoc:
     webcomponent_url: https://cdn.jsdelivr.net/npm/@tinymce/tinymce-webcomponent@2/dist/tinymce-webcomponent.min.js
     jquery_url: https://cdn.jsdelivr.net/npm/@tinymce/tinymce-jquery@2/dist/tinymce-jquery.min.js
     default_meta_keywords: tinymce, documentation, docs, plugins, customizable skins, configuration, examples, html, php, java, javascript, image editor, inline editor, distraction-free editor, classic editor, wysiwyg
-    # product docker variables
-    dockerimageimportfromwordexporttoword: registry.containers.tiny.cloud/docx-converter-tiny
-    dockerimageexporttopdf: registry.containers.tiny.cloud/pdf-converter-tiny
-    dockerimageexporttopdfwindows: registry.containers.tiny.cloud/pdf-converter-windows-tiny
-    # document converter placeholder variables
-    exportpdf_service_url: exportpdf_service_url placeholder 
     # product variables
     productname: TinyMCE
-    productmajorversion: 3
-    productminorversion: '3.5'
+    productmajorversion: 6
+    # update the productminorversion value if required. Likely required.
+    # Note: this value is not changed for .z updates.
+    # For example, an update from 6.6.0 to 6.6.1 does not require a change to this variable’s value.
+    productminorversion: '6.6'
     ##### product name in codeblock
     prodnamecode: tinymce
     #### more names
@@ -73,9 +71,6 @@ asciidoc:
     newline: '<br>'
     virt_ellps: '&#8942;'
     ellps: '&#133;'
-    # Prevent Mergetags becoming variables
-    prefix: '{{'
-    suffix: '}}'
     # Demo logos
     logofordemos: 'https://www.tiny.cloud/docs/images/logos/android-chrome-256x256.png'
     logofordemoshtml: '<p><img style="display: block; margin-left: auto; margin-right: auto;" title="Tiny Logo" src="https://www.tiny.cloud/docs/images/logos/android-chrome-256x256.png" alt="TinyMCE Logo" width="128" height="128"></p>'
@@ -84,3 +79,5 @@ asciidoc:
 nav:
 - modules/ROOT/nav.adoc
 - modules/ROOT/moxiedoc_nav.adoc
+
+# This file is instructional and is never included in the published name-space.
