Revert "DOC-2384: Added local playbook and dev scripts (#3247)"
This reverts commit 8631a515b5158f49535ebb4a407283795c1502b2.

--- a/package.json
+++ b/package.json
@@ -11,13 +11,10 @@
     "build": "./-scripts/api-reference.sh",
     "build-local-ref": "./-scripts/api-reference-local.sh",
     "clean": "rm -rf ./build",
-    "nodemon": "nodemon --exec yarn antora ./antora-playbook.yml",
-    "nodemon-dev": "nodemon --exec yarn antora ./antora-playbook-local.yml",
+    "nodemon-dev": "nodemon --exec yarn antora ./antora-playbook.yml",
     "server": "http-server build/site/ --port 4000",
-    "serve": "npm-run-all -p nodemon server",
-    "serve-dev": "npm-run-all -p nodemon-dev server",
-    "start": "yarn clean && yarn serve",
-    "start-dev": "yarn clean && yarn serve-dev"
+    "serve": "npm-run-all -p nodemon-dev server",
+    "start": "yarn clean && yarn serve"
   },
   "author": "Tiny Technologies Inc",
   "license": "CC-BY-NC-SA-3.0",
